refactor: Car 조회 결과를 불변 스냅샷으로 변경